http://bugs.sakaiproject.org/jira/browse/SAK-6054 Non-owners are now able to see listings for matrices and scaffolding and edit/delete based on permissions.
git-svn-id: https://source.sakaiproject.org/svn/osp/trunk@14198 66ffb92e-73f9-0310-93c1-f5514f145a0a